create metadata, to extract later with points

--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -8,7 +8,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import urllib3\n",
     "import json\n",
+    "import re\n",
     "import numpy as np\n",
     "import pdal\n",
     "import pandas as pd\n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -255,7 +257,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
+   "id": "94d08493-d7a2-4758-869b-619ae620cbac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_txt(txt_path: str) -> list:\n",
+    "    try:\n",
+    "      with open(txt_path, \"r\") as f:\n",
+    "        text_file = f.read().splitlines()\n",
+    "      return text_file\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "add0af7f-4111-4da3-8d68-f189fa057a1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1598"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files = read_txt(\"../data/filenames.txt\")\n",
+    "len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d2496c95-34de-42f1-9f8b-72ca44117879",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_name_and_year(resource_location: str) -> tuple:\n",
+    "    \n",
+    "    resource_location = resource_location.replace('/', '')\n",
+    "    regex = '20[0-9][0-9]+'\n",
+    "    match = re.search(regex, resource_location)\n",
+    "    if(match):\n",
+    "      return (resource_location[:match.start() - 1], resource_location[match.start():match.end()])\n",
+    "    else:\n",
+    "      return (resource_location, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "74969640-b7dd-4f9b-a3e1-3b69e7acd108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_metadata(url = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/\"):\n",
+    "    \n",
+    "    metadata = pd.DataFrame(columns=['filename', 'region',\n",
+    "                      'year', 'xmin', 'xmax', 'ymin', 'ymax', 'points'])\n",
+    "\n",
+    "    index = 0\n",
+    "    for f in files:\n",
+    "      r = urllib3.PoolManager().request('GET', url + f + \"ept.json\")\n",
+    "      if r.status == 200:\n",
+    "        j = json.loads(r.data)\n",
+    "        region, year = get_name_and_year(f)\n",
+    "\n",
+    "        metadata = metadata.append({\n",
+    "            'filename': f.replace('/', ''),\n",
+    "            'region': region,\n",
+    "            'year': year,\n",
+    "            'xmin': j['bounds'][0],\n",
+    "            'xmax': j['bounds'][3],\n",
+    "            'ymin': j['bounds'][1],\n",
+    "            'ymax': j['bounds'][4],\n",
+    "            'points': j['points']}, ignore_index=True)\n",
+    "        \n",
+    "        metadata.to_csv(\"../data/metadata.csv\")\n",
+    "    \n",
+    "    return(metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f4629187-f356-4b29-b3b4-532655e8501a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>filename</th>\n",
+       "      <th>region</th>\n",
+       "      <th>year</th>\n",
+       "      <th>xmin</th>\n",
+       "      <th>xmax</th>\n",
+       "      <th>ymin</th>\n",
+       "      <th>ymax</th>\n",
+       "      <th>points</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AK_BrooksCamp_2012</td>\n",
+       "      <td>AK_BrooksCamp</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>-17347360</td>\n",
+       "      <td>-17321558</td>\n",
+       "      <td>8065364</td>\n",
+       "      <td>8091166</td>\n",
+       "      <td>529285317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AK_Coastal_2009</td>\n",
+       "      <td>AK_Coastal</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>-15730544</td>\n",
+       "      <td>-15691854</td>\n",
+       "      <td>10937407</td>\n",
+       "      <td>10976097</td>\n",
+       "      <td>55711772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AK_Fairbanks-NSBorough_2010</td>\n",
+       "      <td>AK_Fairbanks-NSBorough</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>-16471700</td>\n",
+       "      <td>-16381190</td>\n",
+       "      <td>9519129</td>\n",
+       "      <td>9609639</td>\n",
+       "      <td>1266097458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AK_Juneau_2012</td>\n",
+       "      <td>AK_Juneau</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>-15014449</td>\n",
+       "      <td>-14943073</td>\n",
+       "      <td>8012267</td>\n",
+       "      <td>8083643</td>\n",
+       "      <td>2211557952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AK_Kenai_2008</td>\n",
+       "      <td>AK_Kenai</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>-16906356</td>\n",
+       "      <td>-16570284</td>\n",
+       "      <td>8303726</td>\n",
+       "      <td>8639798</td>\n",
+       "      <td>14054081685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1589</th>\n",
+       "      <td>WY_FEMA_East_B6_2019</td>\n",
+       "      <td>WY_FEMA_East_B6</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>-12129392</td>\n",
+       "      <td>-11884452</td>\n",
+       "      <td>5198641</td>\n",
+       "      <td>5443581</td>\n",
+       "      <td>30948770607</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1590</th>\n",
+       "      <td>WY_FEMA_East_B7_2019</td>\n",
+       "      <td>WY_FEMA_East_B7</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>-12312348</td>\n",
+       "      <td>-12030706</td>\n",
+       "      <td>5096916</td>\n",
+       "      <td>5378558</td>\n",
+       "      <td>37468317458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1591</th>\n",
+       "      <td>WY_FEMA_East_B8_2019</td>\n",
+       "      <td>WY_FEMA_East_B8</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>-12316229</td>\n",
+       "      <td>-12040761</td>\n",
+       "      <td>5151367</td>\n",
+       "      <td>5426835</td>\n",
+       "      <td>43276595668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1592</th>\n",
+       "      <td>WY_FEMA_East_B9_2019</td>\n",
+       "      <td>WY_FEMA_East_B9</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>-12312230</td>\n",
+       "      <td>-12039520</td>\n",
+       "      <td>5248567</td>\n",
+       "      <td>5521277</td>\n",
+       "      <td>101655570782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1593</th>\n",
+       "      <td>WY_Southwest_1_2020</td>\n",
+       "      <td>WY_Southwest_1</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>-12412389</td>\n",
+       "      <td>-12254989</td>\n",
+       "      <td>5204407</td>\n",
+       "      <td>5361807</td>\n",
+       "      <td>31390102079</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1594 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         filename                  region  year       xmin  \\\n",
+       "0              AK_BrooksCamp_2012           AK_BrooksCamp  2012  -17347360   \n",
+       "1                 AK_Coastal_2009              AK_Coastal  2009  -15730544   \n",
+       "2     AK_Fairbanks-NSBorough_2010  AK_Fairbanks-NSBorough  2010  -16471700   \n",
+       "3                  AK_Juneau_2012               AK_Juneau  2012  -15014449   \n",
+       "4                   AK_Kenai_2008                AK_Kenai  2008  -16906356   \n",
+       "...                           ...                     ...   ...        ...   \n",
+       "1589         WY_FEMA_East_B6_2019         WY_FEMA_East_B6  2019  -12129392   \n",
+       "1590         WY_FEMA_East_B7_2019         WY_FEMA_East_B7  2019  -12312348   \n",
+       "1591         WY_FEMA_East_B8_2019         WY_FEMA_East_B8  2019  -12316229   \n",
+       "1592         WY_FEMA_East_B9_2019         WY_FEMA_East_B9  2019  -12312230   \n",
+       "1593          WY_Southwest_1_2020          WY_Southwest_1  2020  -12412389   \n",
+       "\n",
+       "           xmax      ymin      ymax        points  \n",
+       "0     -17321558   8065364   8091166     529285317  \n",
+       "1     -15691854  10937407  10976097      55711772  \n",
+       "2     -16381190   9519129   9609639    1266097458  \n",
+       "3     -14943073   8012267   8083643    2211557952  \n",
+       "4     -16570284   8303726   8639798   14054081685  \n",
+       "...         ...       ...       ...           ...  \n",
+       "1589  -11884452   5198641   5443581   30948770607  \n",
+       "1590  -12030706   5096916   5378558   37468317458  \n",
+       "1591  -12040761   5151367   5426835   43276595668  \n",
+       "1592  -12039520   5248567   5521277  101655570782  \n",
+       "1593  -12254989   5204407   5361807   31390102079  \n",
+       "\n",
+       "[1594 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "get_metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
    "metadata": {},
    "outputs": [],
