write the fetch data function

--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,6 @@
     "    def __init__(self, path = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/\", pipeline_json_path: str=\"../pipeline.json\") -> None:\n",
     "            \n",
     "        self.path = path\n",
-    "        self.input_epsg = 3857\n",
     "        self.txt = self.read_txt(\"../data/filenames.txt\")\n",
     "        self.a = self.read_json(\"../pipeline.json\")\n",
     "        self.metadata = self.read_csv(\"../data/metadata.csv\")\n",
@@ -190,18 +189,18 @@
     "        cond_ymax = self.metadata.ymax >= maxy\n",
     "\n",
     "\n",
-    "        df = metadata[cond_xmin & cond_xmax & cond_ymin & cond_ymax]\n",
+    "        df = self.metadata[cond_xmin & cond_xmax & cond_ymin & cond_ymax]\n",
     "        sort_df = df.sort_values(by=['year'])\n",
     "        regions = sort_df['filename'].to_list()\n",
     "        if(len(df)==0):\n",
     "            print(\"polygon is not located\")\n",
     "        \n",
-    "        return regions"
+    "        return regions   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -221,360 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "add0af7f-4111-4da3-8d68-f189fa057a1a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1598"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "files = US.read_txt(\"../data/filenames.txt\")\n",
-    "len(files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "74969640-b7dd-4f9b-a3e1-3b69e7acd108",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline executed successfully.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>elevation</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>311.06</td>\n",
-       "      <td>POINT (-93.76450 41.93500)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>310.98</td>\n",
-       "      <td>POINT (-93.76451 41.93500)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>311.06</td>\n",
-       "      <td>POINT (-93.76454 41.93501)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>310.99</td>\n",
-       "      <td>POINT (-93.76455 41.93501)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>311.09</td>\n",
-       "      <td>POINT (-93.76453 41.93499)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>913969</th>\n",
-       "      <td>309.80</td>\n",
-       "      <td>POINT (-93.76211 41.93347)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>913970</th>\n",
-       "      <td>317.36</td>\n",
-       "      <td>POINT (-93.76370 41.93348)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>913971</th>\n",
-       "      <td>308.19</td>\n",
-       "      <td>POINT (-93.76052 41.93466)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>913972</th>\n",
-       "      <td>309.04</td>\n",
-       "      <td>POINT (-93.76211 41.93465)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>913973</th>\n",
-       "      <td>314.48</td>\n",
-       "      <td>POINT (-93.76371 41.93466)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>913974 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        elevation                    geometry\n",
-       "0          311.06  POINT (-93.76450 41.93500)\n",
-       "1          310.98  POINT (-93.76451 41.93500)\n",
-       "2          311.06  POINT (-93.76454 41.93501)\n",
-       "3          310.99  POINT (-93.76455 41.93501)\n",
-       "4          311.09  POINT (-93.76453 41.93499)\n",
-       "...           ...                         ...\n",
-       "913969     309.80  POINT (-93.76211 41.93347)\n",
-       "913970     317.36  POINT (-93.76370 41.93348)\n",
-       "913971     308.19  POINT (-93.76052 41.93466)\n",
-       "913972     309.04  POINT (-93.76211 41.93465)\n",
-       "913973     314.48  POINT (-93.76371 41.93466)\n",
-       "\n",
-       "[913974 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "US.fetch_region_data(polygon)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "b780624b-fea7-439f-a7a1-e6d35e1e6e20",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>region</th>\n",
-       "      <th>year</th>\n",
-       "      <th>xmin</th>\n",
-       "      <th>xmax</th>\n",
-       "      <th>ymin</th>\n",
-       "      <th>ymax</th>\n",
-       "      <th>points</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AK_BrooksCamp_2012</td>\n",
-       "      <td>AK_BrooksCamp</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>-17347360.0</td>\n",
-       "      <td>-17321558.0</td>\n",
-       "      <td>8065364.0</td>\n",
-       "      <td>8091166.0</td>\n",
-       "      <td>529285317</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AK_Coastal_2009</td>\n",
-       "      <td>AK_Coastal</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>-15730544.0</td>\n",
-       "      <td>-15691854.0</td>\n",
-       "      <td>10937407.0</td>\n",
-       "      <td>10976097.0</td>\n",
-       "      <td>55711772</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AK_Fairbanks-NSBorough_2010</td>\n",
-       "      <td>AK_Fairbanks-NSBorough</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>-16471700.0</td>\n",
-       "      <td>-16381190.0</td>\n",
-       "      <td>9519129.0</td>\n",
-       "      <td>9609639.0</td>\n",
-       "      <td>1266097458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AK_Juneau_2012</td>\n",
-       "      <td>AK_Juneau</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>-15014449.0</td>\n",
-       "      <td>-14943073.0</td>\n",
-       "      <td>8012267.0</td>\n",
-       "      <td>8083643.0</td>\n",
-       "      <td>2211557952</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AK_Kenai_2008</td>\n",
-       "      <td>AK_Kenai</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>-16906356.0</td>\n",
-       "      <td>-16570284.0</td>\n",
-       "      <td>8303726.0</td>\n",
-       "      <td>8639798.0</td>\n",
-       "      <td>14054081685</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1589</th>\n",
-       "      <td>WY_FEMA_East_B6_2019</td>\n",
-       "      <td>WY_FEMA_East_B6</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>-12129392.0</td>\n",
-       "      <td>-11884452.0</td>\n",
-       "      <td>5198641.0</td>\n",
-       "      <td>5443581.0</td>\n",
-       "      <td>30948770607</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1590</th>\n",
-       "      <td>WY_FEMA_East_B7_2019</td>\n",
-       "      <td>WY_FEMA_East_B7</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>-12312348.0</td>\n",
-       "      <td>-12030706.0</td>\n",
-       "      <td>5096916.0</td>\n",
-       "      <td>5378558.0</td>\n",
-       "      <td>37468317458</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1591</th>\n",
-       "      <td>WY_FEMA_East_B8_2019</td>\n",
-       "      <td>WY_FEMA_East_B8</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>-12316229.0</td>\n",
-       "      <td>-12040761.0</td>\n",
-       "      <td>5151367.0</td>\n",
-       "      <td>5426835.0</td>\n",
-       "      <td>43276595668</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1592</th>\n",
-       "      <td>WY_FEMA_East_B9_2019</td>\n",
-       "      <td>WY_FEMA_East_B9</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>-12312230.0</td>\n",
-       "      <td>-12039520.0</td>\n",
-       "      <td>5248567.0</td>\n",
-       "      <td>5521277.0</td>\n",
-       "      <td>101655570782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1593</th>\n",
-       "      <td>WY_Southwest_1_2020</td>\n",
-       "      <td>WY_Southwest_1</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>-12412389.0</td>\n",
-       "      <td>-12254989.0</td>\n",
-       "      <td>5204407.0</td>\n",
-       "      <td>5361807.0</td>\n",
-       "      <td>31390102079</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1594 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         filename                  region    year        xmin  \\\n",
-       "0              AK_BrooksCamp_2012           AK_BrooksCamp  2012.0 -17347360.0   \n",
-       "1                 AK_Coastal_2009              AK_Coastal  2009.0 -15730544.0   \n",
-       "2     AK_Fairbanks-NSBorough_2010  AK_Fairbanks-NSBorough  2010.0 -16471700.0   \n",
-       "3                  AK_Juneau_2012               AK_Juneau  2012.0 -15014449.0   \n",
-       "4                   AK_Kenai_2008                AK_Kenai  2008.0 -16906356.0   \n",
-       "...                           ...                     ...     ...         ...   \n",
-       "1589         WY_FEMA_East_B6_2019         WY_FEMA_East_B6  2019.0 -12129392.0   \n",
-       "1590         WY_FEMA_East_B7_2019         WY_FEMA_East_B7  2019.0 -12312348.0   \n",
-       "1591         WY_FEMA_East_B8_2019         WY_FEMA_East_B8  2019.0 -12316229.0   \n",
-       "1592         WY_FEMA_East_B9_2019         WY_FEMA_East_B9  2019.0 -12312230.0   \n",
-       "1593          WY_Southwest_1_2020          WY_Southwest_1  2020.0 -12412389.0   \n",
-       "\n",
-       "            xmax        ymin        ymax        points  \n",
-       "0    -17321558.0   8065364.0   8091166.0     529285317  \n",
-       "1    -15691854.0  10937407.0  10976097.0      55711772  \n",
-       "2    -16381190.0   9519129.0   9609639.0    1266097458  \n",
-       "3    -14943073.0   8012267.0   8083643.0    2211557952  \n",
-       "4    -16570284.0   8303726.0   8639798.0   14054081685  \n",
-       "...          ...         ...         ...           ...  \n",
-       "1589 -11884452.0   5198641.0   5443581.0   30948770607  \n",
-       "1590 -12030706.0   5096916.0   5378558.0   37468317458  \n",
-       "1591 -12040761.0   5151367.0   5426835.0   43276595668  \n",
-       "1592 -12039520.0   5248567.0   5521277.0  101655570782  \n",
-       "1593 -12254989.0   5204407.0   5361807.0   31390102079  \n",
-       "\n",
-       "[1594 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metadata = pd.read_csv(\"../data/metadata.csv\")\n",
-    "metadata.drop(\"Unnamed: 0\", axis=1, inplace=True)\n",
-    "metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "650bd70c-213b-4df9-821a-4d516fbee682",
+   "execution_count": 8,
+   "id": "9ad3c397-2c1b-438d-aa60-6ff6c822af23",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +237,7 @@
        " 'IA_FullState']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,34 +248,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "c681c81c-e9cd-4b5f-8935-bd3eca36bda6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "003e23d1-2816-4a3c-b260-5f8e5a7a682f",
+   "execution_count": 10,
+   "id": "9e989fdf-0564-4fc1-8de6-6fc7e4e5f45f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    " def fetch_data(polygon: Polygon, epsg = 3857, region=\"IA_FullState\") -> dict:\n",
+    "        regions = US.fetch_regions(polygon)\n",
+    "\n",
+    "        region_dicto = {}\n",
+    "        for i in regions:\n",
+    "            if i==region:\n",
+    "                year = (US.metadata[US.metadata.filename == i].year.values[0])\n",
+    "                year = str(year)\n",
+    "                \n",
+    "                if(year==\"nan\"):\n",
+    "                    year = \"Year: not_specified\"\n",
+    "                \n",
+    "                region_df = US.fetch_region_data(polygon)\n",
+    "            \n",
+    "                if region_df.empty == False:\n",
+    "                    region_dicto[year] = region_df\n",
+    "\n",
+    "        return(region_dicto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1c04e66e-15e2-4f90-9771-d6a5df6cab95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline executed successfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Year: not_specified':         elevation                    geometry\n",
+       " 0          307.78  POINT (-93.75913 41.93289)\n",
+       " 1          307.79  POINT (-93.75912 41.93289)\n",
+       " 2          307.69  POINT (-93.75911 41.93289)\n",
+       " 3          307.64  POINT (-93.75908 41.93289)\n",
+       " 4          307.66  POINT (-93.75906 41.93289)\n",
+       " ...           ...                         ...\n",
+       " 913969     320.46  POINT (-93.76544 41.93500)\n",
+       " 913970     310.19  POINT (-93.76563 41.93499)\n",
+       " 913971     310.32  POINT (-93.76573 41.93498)\n",
+       " 913972     310.33  POINT (-93.76583 41.93499)\n",
+       " 913973     311.24  POINT (-93.76613 41.93499)\n",
+       " \n",
+       " [913974 rows x 2 columns]}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fetch_data(polygon)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad3c397-2c1b-438d-aa60-6ff6c822af23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e989fdf-0564-4fc1-8de6-6fc7e4e5f45f",
+   "id": "85106596-1535-4196-ae42-ea2ee9b5e939",
    "metadata": {},
    "outputs": [],
    "source": []
