--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,6 @@
     "\n",
     "        try:\n",
     "            pipeline.execute()\n",
-    "            print(f'Pipeline executed successfully.')\n",
     "            return pipeline\n",
     "        except RuntimeError as e:\n",
     "            print('Pipeline execution failed')\n",
@@ -195,12 +194,31 @@
     "        if(len(df)==0):\n",
     "            print(\"polygon is not located\")\n",
     "        \n",
-    "        return regions   "
+    "        return regions   \n",
+    "    \n",
+    "    def fetch_data(self, polygon: Polygon, region=\"IA_FullState\") -> dict:\n",
+    "        regions = self.fetch_regions(polygon)\n",
+    "\n",
+    "        region_dicto = {}\n",
+    "        for i in regions:\n",
+    "            if i==region:\n",
+    "                year = (self.metadata[self.metadata.filename == i].year.values[0])\n",
+    "                year = str(year)\n",
+    "                \n",
+    "                if(year==\"nan\"):\n",
+    "                    year = \"Year: not_specified\"\n",
+    "                \n",
+    "                region_df = self.fetch_region_data(polygon)\n",
+    "            \n",
+    "                if region_df.empty == False:\n",
+    "                    region_dicto[year] = region_df\n",
+    "\n",
+    "        return(region_dicto)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -220,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "9ad3c397-2c1b-438d-aa60-6ff6c822af23",
    "metadata": {},
    "outputs": [
@@ -237,7 +255,7 @@
        " 'IA_FullState']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,44 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "9e989fdf-0564-4fc1-8de6-6fc7e4e5f45f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " def fetch_data(polygon: Polygon, epsg = 3857, region=\"IA_FullState\") -> dict:\n",
-    "        regions = US.fetch_regions(polygon)\n",
-    "\n",
-    "        region_dicto = {}\n",
-    "        for i in regions:\n",
-    "            if i==region:\n",
-    "                year = (US.metadata[US.metadata.filename == i].year.values[0])\n",
-    "                year = str(year)\n",
-    "                \n",
-    "                if(year==\"nan\"):\n",
-    "                    year = \"Year: not_specified\"\n",
-    "                \n",
-    "                region_df = US.fetch_region_data(polygon)\n",
-    "            \n",
-    "                if region_df.empty == False:\n",
-    "                    region_dicto[year] = region_df\n",
-    "\n",
-    "        return(region_dicto)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "1c04e66e-15e2-4f90-9771-d6a5df6cab95",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline executed successfully.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -296,31 +280,168 @@
        " 3          307.64  POINT (-93.75908 41.93289)\n",
        " 4          307.66  POINT (-93.75906 41.93289)\n",
        " ...           ...                         ...\n",
-       " 913969     320.46  POINT (-93.76544 41.93500)\n",
-       " 913970     310.19  POINT (-93.76563 41.93499)\n",
-       " 913971     310.32  POINT (-93.76573 41.93498)\n",
-       " 913972     310.33  POINT (-93.76583 41.93499)\n",
-       " 913973     311.24  POINT (-93.76613 41.93499)\n",
+       " 913969     326.90  POINT (-93.76560 41.93487)\n",
+       " 913970     327.32  POINT (-93.76575 41.93487)\n",
+       " 913971     328.34  POINT (-93.76539 41.93498)\n",
+       " 913972     315.14  POINT (-93.76131 41.92578)\n",
+       " 913973     318.21  POINT (-93.76133 41.93051)\n",
        " \n",
        " [913974 rows x 2 columns]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fetch_data(polygon)"
+    "US.fetch_data(polygon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "85106596-1535-4196-ae42-ea2ee9b5e939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>320.62</td>\n",
+       "      <td>POINT (-93.76411 41.93052)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>320.63</td>\n",
+       "      <td>POINT (-93.76410 41.93052)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>320.63</td>\n",
+       "      <td>POINT (-93.76411 41.93052)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>320.56</td>\n",
+       "      <td>POINT (-93.76420 41.93052)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>320.59</td>\n",
+       "      <td>POINT (-93.76419 41.93052)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913969</th>\n",
+       "      <td>308.19</td>\n",
+       "      <td>POINT (-93.76052 41.93466)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913970</th>\n",
+       "      <td>309.04</td>\n",
+       "      <td>POINT (-93.76211 41.93465)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913971</th>\n",
+       "      <td>314.48</td>\n",
+       "      <td>POINT (-93.76371 41.93466)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913972</th>\n",
+       "      <td>315.14</td>\n",
+       "      <td>POINT (-93.76131 41.92578)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913973</th>\n",
+       "      <td>318.21</td>\n",
+       "      <td>POINT (-93.76133 41.93051)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>913974 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        elevation                    geometry\n",
+       "0          320.62  POINT (-93.76411 41.93052)\n",
+       "1          320.63  POINT (-93.76410 41.93052)\n",
+       "2          320.63  POINT (-93.76411 41.93052)\n",
+       "3          320.56  POINT (-93.76420 41.93052)\n",
+       "4          320.59  POINT (-93.76419 41.93052)\n",
+       "...           ...                         ...\n",
+       "913969     308.19  POINT (-93.76052 41.93466)\n",
+       "913970     309.04  POINT (-93.76211 41.93465)\n",
+       "913971     314.48  POINT (-93.76371 41.93466)\n",
+       "913972     315.14  POINT (-93.76131 41.92578)\n",
+       "913973     318.21  POINT (-93.76133 41.93051)\n",
+       "\n",
+       "[913974 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "US.fetch_region_data(polygon)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85106596-1535-4196-ae42-ea2ee9b5e939",
+   "id": "5a84a731-79bf-4163-bb21-3f0ef2f90891",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fetch_data(self, polygon: Polygon, region=\"IA_FullState\") -> dict:\n",
+    "        regions = self.fetch_regions(polygon)\n",
+    "\n",
+    "        region_dicto = {}\n",
+    "        for i in regions:\n",
+    "            if i==region:\n",
+    "                year = (self.metadata[self.metadata.filename == i].year.values[0])\n",
+    "                year = str(year)\n",
+    "                \n",
+    "                if(year==\"nan\"):\n",
+    "                    year = \"Year: not_specified\"\n",
+    "                \n",
+    "                region_df = self.fetch_region_data(polygon)\n",
+    "            \n",
+    "                if region_df.empty == False:\n",
+    "                    region_dicto[year] = region_df\n",
+    "\n",
+    "        return(region_dicto)"
+   ]
   }
  ],
  "metadata": {
