--- a/notebooks/load_and_fetch_lidar.ipynb
+++ b/notebooks/load_and_fetch_lidar.ipynb
@@ -84,7 +84,7 @@
    "id": "f19473eb-f927-40af-83d5-5fb110ebb3bf",
    "metadata": {},
    "source": [
-    "## Output: Fetch data by year in form of python dictionary including geometry and elvation"
+    "## Output: Fetch Lidar Data"
    ]
   },
   {
